pyquest/ql/test/semantic_analysis/invalid/test028.ql
// Incompatible result type for multiplication operation
form testForm {
	"First Question"
	someIdentifier : integer = 10.1 * 10
}